@@ -25,14 +25,11 @@ import static spark.Spark.post;
 
 import com.redhat.rhn.common.conf.ConfigDefaults;
 import com.redhat.rhn.domain.channel.Channel;
-import com.redhat.rhn.domain.channel.ChannelArch;
 import com.redhat.rhn.domain.channel.ChannelFactory;
-import com.redhat.rhn.domain.channel.ChannelFamily;
 import com.redhat.rhn.domain.channel.ChannelProduct;
 import com.redhat.rhn.domain.channel.ClonedChannel;
 import com.redhat.rhn.domain.channel.ProductName;
 import com.redhat.rhn.domain.channel.test.ChannelFactoryTest;
-import com.redhat.rhn.domain.channel.test.ChannelFamilyFactoryTest;
 import com.redhat.rhn.domain.org.Org;
 import com.redhat.rhn.domain.role.RoleFactory;
 import com.redhat.rhn.domain.user.User;
@@ -47,12 +44,14 @@ import com.redhat.rhn.testing.UserTestUtils;
 
 import com.suse.manager.hub.HubController;
 import com.suse.manager.hub.HubManager;
+import com.suse.manager.model.hub.ChannelInfoDetailsJson;
 import com.suse.manager.model.hub.ChannelInfoJson;
-import com.suse.manager.model.hub.CustomChannelInfoJson;
+import com.suse.manager.model.hub.HubFactory;
 import com.suse.manager.model.hub.IssAccessToken;
+import com.suse.manager.model.hub.IssPeripheral;
+import com.suse.manager.model.hub.IssPeripheralChannels;
 import com.suse.manager.model.hub.IssRole;
 import com.suse.manager.model.hub.ManagerInfoJson;
-import com.suse.manager.model.hub.ModifyCustomChannelInfoJson;
 import com.suse.manager.model.hub.OrgInfoJson;
 import com.suse.manager.webui.utils.gson.ResultJson;
 import com.suse.manager.webui.utils.token.IssTokenBuilder;
@@ -126,9 +125,7 @@ public class HubControllerTest extends JMockBaseTestCaseWithUser {
                 Arguments.of(HttpMethod.post, "/hub/removeReportDbCredentials", IssRole.HUB),
                 Arguments.of(HttpMethod.get, "/hub/listAllPeripheralOrgs", IssRole.HUB),
                 Arguments.of(HttpMethod.get, "/hub/listAllPeripheralChannels", IssRole.HUB),
-                Arguments.of(HttpMethod.post, "/hub/addVendorChannels", IssRole.HUB),
-                Arguments.of(HttpMethod.post, "/hub/addCustomChannels", IssRole.HUB),
-                Arguments.of(HttpMethod.post, "/hub/modifyCustomChannels", IssRole.HUB),
+                Arguments.of(HttpMethod.post, "/hub/syncChannels", IssRole.HUB),
                 Arguments.of(HttpMethod.post, "/hub/sync/channelfamilies", IssRole.HUB),
                 Arguments.of(HttpMethod.post, "/hub/sync/products", IssRole.HUB),
                 Arguments.of(HttpMethod.post, "/hub/sync/repositories", IssRole.HUB),
@@ -255,7 +252,7 @@ public class HubControllerTest extends JMockBaseTestCaseWithUser {
                 .withApiEndpoint(apiUnderTest)
                 .withHttpMethod(HttpMethod.post)
                 .withBearerTokenInHeaders()
-                .withBody(bodyMap)
+                .withBody(Json.GSON.toJson(bodyMap, Map.class))
                 .simulateControllerApiCall();
         JsonObject jsonObj = Json.GSON.fromJson(answer, JsonObject.class);
 
@@ -280,7 +277,7 @@ public class HubControllerTest extends JMockBaseTestCaseWithUser {
                 .withHttpMethod(HttpMethod.post)
                 .withRole(IssRole.HUB)
                 .withBearerTokenInHeaders()
-                .withBody(bodyMap)
+                .withBody(Json.GSON.toJson(bodyMap, Map.class))
                 .simulateControllerApiCall();
         JsonObject jsonObj = Json.GSON.fromJson(answer, JsonObject.class);
 
@@ -324,7 +321,7 @@ public class HubControllerTest extends JMockBaseTestCaseWithUser {
                 .withHttpMethod(HttpMethod.post)
                 .withRole(IssRole.HUB)
                 .withBearerTokenInHeaders()
-                .withBody(bodyMap)
+                .withBody(Json.GSON.toJson(bodyMap, Map.class))
                 .simulateControllerApiCall();
         JsonObject jsonObj = Json.GSON.fromJson(answer, JsonObject.class);
 
@@ -374,7 +371,7 @@ public class HubControllerTest extends JMockBaseTestCaseWithUser {
                 .withHttpMethod(HttpMethod.post)
                 .withRole(IssRole.HUB)
                 .withBearerTokenInHeaders()
-                .withBody(bodyMap)
+                .withBody(Json.GSON.toJson(bodyMap, Map.class))
                 .simulateControllerApiCall();
         JsonObject jsonObj = Json.GSON.fromJson(answer, JsonObject.class);
 
@@ -475,22 +472,6 @@ public class HubControllerTest extends JMockBaseTestCaseWithUser {
         assertEquals(TEST_ERROR_MESSAGE, jsonObj.get("messages").getAsJsonArray().get(1).getAsString());
     }
 
-    private Channel utilityCreateVendorBaseChannel(String name, String label) throws Exception {
-        Org nullOrg = null;
-        ChannelFamily cfam = ChannelFamilyFactoryTest.createNullOrgTestChannelFamily();
-        String query = "ChannelArch.findById";
-        ChannelArch arch = (ChannelArch) TestUtils.lookupFromCacheById(500L, query);
-        return ChannelFactoryTest.createTestChannel(name, label, nullOrg, arch, cfam);
-    }
-
-    private Channel utilityCreateVendorChannel(String name, String label, Channel vendorBaseChannel) throws Exception {
-        Channel vendorChannel = utilityCreateVendorBaseChannel(name, label);
-        vendorChannel.setParentChannel(vendorBaseChannel);
-        vendorChannel.setChecksumType(ChannelFactory.findChecksumTypeByLabel("sha512"));
-        ChannelFactory.save(vendorChannel);
-        return vendorChannel;
-    }
-
     private static Stream<Arguments> allBaseAndVendorChannelAlreadyPresentCombinations() {
         return Stream.of(Arguments.of(false, false),
                 Arguments.of(true, false),
@@ -500,91 +481,83 @@ public class HubControllerTest extends JMockBaseTestCaseWithUser {
 
     @ParameterizedTest
     @MethodSource("allBaseAndVendorChannelAlreadyPresentCombinations")
-    public void checkApiAddVendorChannel(boolean baseChannelAlreadyPresentInPeripheral,
-                                         boolean channelAlreadyPresentInPeripheral) throws Exception {
-        String apiUnderTest = "/hub/addVendorChannels";
+    public void checkApiSyncChannel(boolean baseChannelAlreadyPresentInPeripheral,
+                                    boolean channelAlreadyPresentInPeripheral) throws Exception {
+        String apiUnderTest = "/hub/syncChannels";
 
-        //SUSE Linux Enterprise Server 11 SP3 x86_64
-        String vendorBaseChannelTemplateName = "SLES11-SP3-Pool for x86_64";
-        String vendorBaseChannelTemplateLabel = "sles11-sp3-pool-x86_64";
-        String vendorChannelTemplateName = "SLES11-SP3-Updates for x86_64";
-        String vendorChannelTemplateLabel = "sles11-sp3-updates-x86_64";
+        //SUSE Linux Enterprise Server 15 SP7 x86_64
+        String vendorBaseChannelTemplateName = "SLES15-SP7-Pool for x86_64";
+        String vendorBaseChannelTemplateLabel = "sles15-sp7-pool-x86_64";
+        String vendorChannelTemplateName = "SLES15-SP7-Updates for x86_64";
+        String vendorChannelTemplateLabel = "sles15-sp7-updates-x86_64";
+        String peripheralFQDN = "peripheral.example.com";
+        boolean testIsGpgCheck = true;
+        boolean testIssInstallerUpdates = false;
+        String testArchLabel = "channel-x86_64";
+        String testChecksumLabel = "sha256";
 
-        String answer = testUtils.createTestVendorChannels(user, DUMMY_SERVER_FQDN,
-                vendorBaseChannelTemplateName, vendorBaseChannelTemplateLabel,
-                baseChannelAlreadyPresentInPeripheral,
-                vendorChannelTemplateName, vendorChannelTemplateLabel,
-                channelAlreadyPresentInPeripheral);
+        Date endOfLifeDate = testUtils.createDateUtil(2096, 10, 22);
 
-        int expectedNumOfPeripheralCreatedChannels = 2;
+        HubFactory hubFactory = new HubFactory();
+        IssPeripheral peripheral = new IssPeripheral(peripheralFQDN, "");
+        hubFactory.save(peripheral);
+
+        //create peripheral vendor Channels
+        List<ChannelInfoDetailsJson> vendorChannelInfoListIn = new ArrayList<>();
+        Channel vendorCh = null;
         if (baseChannelAlreadyPresentInPeripheral) {
-            expectedNumOfPeripheralCreatedChannels--;
-        }
-        if (channelAlreadyPresentInPeripheral) {
-            expectedNumOfPeripheralCreatedChannels--;
-        }
-
-        List<ChannelInfoJson> peripheralVendorCreatedChannelsInfo =
-                Arrays.asList(Json.GSON.fromJson(answer, ChannelInfoJson[].class));
-
-        assertEquals(expectedNumOfPeripheralCreatedChannels, peripheralVendorCreatedChannelsInfo.size());
-
-        Optional<ChannelInfoJson> peripheralVendorBaseChannelInfo =
-                peripheralVendorCreatedChannelsInfo
-                        .stream()
-                        .filter(e -> e.getLabel().equals(vendorBaseChannelTemplateLabel))
-                        .findAny();
-        if (baseChannelAlreadyPresentInPeripheral) {
-            assertTrue(peripheralVendorBaseChannelInfo.isEmpty(),
-                    String.format("%s API call mistakenly creating base channel %s",
-                            apiUnderTest, vendorBaseChannelTemplateLabel));
+            vendorCh = testUtils.createVendorBaseChannel(vendorBaseChannelTemplateName, vendorBaseChannelTemplateLabel);
+            IssPeripheralChannels issCh = new IssPeripheralChannels(peripheral, vendorCh);
+            hubFactory.save(issCh);
         }
         else {
-            assertTrue(peripheralVendorBaseChannelInfo.isPresent(),
-                    String.format("%s API call mistakenly NOT creating base channel %s",
-                            apiUnderTest, vendorBaseChannelTemplateLabel));
-            assertEquals(vendorBaseChannelTemplateName, peripheralVendorBaseChannelInfo.get().getName());
-            assertEquals(vendorBaseChannelTemplateLabel, peripheralVendorBaseChannelInfo.get().getLabel());
-            assertNull(peripheralVendorBaseChannelInfo.get().getOrgId());
-            assertNull(peripheralVendorBaseChannelInfo.get().getParentChannelId());
+            ChannelInfoDetailsJson vendorBaseChInfo = testUtils.createChannelInfoDetailsJson(null,
+                    vendorBaseChannelTemplateLabel, "", "",
+                    testIsGpgCheck, testIssInstallerUpdates, testArchLabel, testChecksumLabel, endOfLifeDate);
+            vendorBaseChInfo.setName(vendorBaseChannelTemplateName);
+            vendorChannelInfoListIn.add(vendorBaseChInfo);
         }
-
-        Optional<ChannelInfoJson> testChildPeriphChInfo =
-                peripheralVendorCreatedChannelsInfo
-                        .stream()
-                        .filter(e -> e.getLabel().equals(vendorChannelTemplateLabel))
-                        .findAny();
         if (channelAlreadyPresentInPeripheral) {
-            assertTrue(testChildPeriphChInfo.isEmpty(),
-                    String.format("%s API call mistakenly creating vendor channel %s",
-                            apiUnderTest, vendorChannelTemplateLabel));
+            Channel ch = testUtils.createVendorChannel(vendorChannelTemplateName, vendorChannelTemplateLabel, vendorCh);
+            IssPeripheralChannels issCh = new IssPeripheralChannels(peripheral, ch);
+            hubFactory.save(issCh);
         }
         else {
-            assertTrue(testChildPeriphChInfo.isPresent(),
-                    String.format("%s API call mistakenly NOT creating vendor channel %s",
-                            apiUnderTest, vendorChannelTemplateLabel));
+            ChannelInfoDetailsJson vendorChInfo = testUtils.createChannelInfoDetailsJson(null,
+                    vendorChannelTemplateLabel, vendorBaseChannelTemplateLabel, "",
+                    testIsGpgCheck, testIssInstallerUpdates, testArchLabel, testChecksumLabel, endOfLifeDate);
+            vendorChInfo.setName(vendorChannelTemplateName);
+            vendorChannelInfoListIn.add(vendorChInfo);
+        }
+        vendorChannelInfoListIn.addAll(hubFactory.listChannelInfoForPeripheral(peripheral));
 
-            assertEquals(vendorChannelTemplateName, testChildPeriphChInfo.get().getName());
-            assertEquals(vendorChannelTemplateLabel, testChildPeriphChInfo.get().getLabel());
-            assertNull(testChildPeriphChInfo.get().getOrgId());
-            if (baseChannelAlreadyPresentInPeripheral) {
-                assertTrue(testChildPeriphChInfo.get().getParentChannelId() > 0,
-                        "child channel not having valid parent channel id");
-            }
-            else {
-                assertEquals(peripheralVendorBaseChannelInfo.get().getId(),
-                        testChildPeriphChInfo.get().getParentChannelId());
-            }
+        String answer = (String) testUtils.testSyncChannelsApiCall(DUMMY_SERVER_FQDN, vendorChannelInfoListIn);
+        ResultJson<?> result = Json.GSON.fromJson(answer, ResultJson.class);
+        assertTrue(result.isSuccess(), "Failed: " + answer);
+
+        Channel baseChannel = ChannelFactory.lookupByLabel(vendorBaseChannelTemplateLabel);
+        assertNotNull(baseChannel);
+        Channel childChannel = ChannelFactory.lookupByLabel(vendorChannelTemplateLabel);
+        assertNotNull(childChannel);
+
+        assertEquals(1, baseChannel.getSources().size());
+        assertEquals(1, childChannel.getSources().size());
+
+        if (!baseChannel.getSources().stream().allMatch(cs -> cs.getSourceUrl().contains("?"))) {
+            fail("Content Source URL is missing a token for Channel " + baseChannel);
+        }
+        if (!childChannel.getSources().stream().allMatch(cs -> cs.getSourceUrl().contains("?"))) {
+            fail("Content Source URL is missing a token for Channel " + childChannel);
         }
     }
 
     @ParameterizedTest
     @ValueSource(booleans = {true, false})
-    public void checkApiAddCustomChannel(boolean testIncludeTestChannelInChain) throws Exception {
+    public void checkApiSyncCustomChannel(boolean testIncludeTestChannelInChain) throws Exception {
         boolean testIsGpgCheck = true;
         boolean testIssInstallerUpdates = true;
-        String testArchLabel = "channel-s390";
-        String testChecksumLabel = "sha256";
+        String testArchLabel = "channel-x86_64";
+        String testChecksumLabel = "sha512";
 
         Date endOfLifeDate = testUtils.createDateUtil(2096, 10, 22);
 
@@ -600,36 +573,55 @@ public class HubControllerTest extends JMockBaseTestCaseWithUser {
         String vendorBaseChannelTemplateLabel = "sles11-sp3-pool-x86_64"; //SUSE Linux Enterprise Server 11 SP3 x86_64
         String vendorChannelTemplateLabel = "sles11-sp3-updates-x86_64";
 
-        CustomChannelInfoJson cloneBaseChInfo = testUtils.createCustomChannelInfoJson(testPeripheralOrgId,
-                "cloneBaseCh", "", vendorBaseChannelTemplateLabel,
+        ChannelInfoDetailsJson vendorBaseChInfo = testUtils.createChannelInfoDetailsJson(null,
+                vendorBaseChannelTemplateLabel, "", "",
                 testIsGpgCheck, testIssInstallerUpdates, testArchLabel, testChecksumLabel, endOfLifeDate);
 
-        CustomChannelInfoJson cloneDevelChInfo = testUtils.createCustomChannelInfoJson(testPeripheralOrgId,
-                "cloneDevelCh", "cloneBaseCh", vendorChannelTemplateLabel,
+        ChannelInfoDetailsJson vendorChInfo = testUtils.createChannelInfoDetailsJson(null,
+                vendorChannelTemplateLabel, vendorBaseChannelTemplateLabel, "",
                 testIsGpgCheck, testIssInstallerUpdates, testArchLabel, testChecksumLabel, endOfLifeDate);
 
-        CustomChannelInfoJson cloneTestChInfo = null;
-        String originalOfProdCh = "cloneDevelCh";
-        if (testIncludeTestChannelInChain) {
-            cloneTestChInfo = testUtils.createCustomChannelInfoJson(testPeripheralOrgId,
-                    "cloneTestCh", "", "cloneDevelCh",
-                    testIsGpgCheck, testIssInstallerUpdates, testArchLabel, testChecksumLabel, endOfLifeDate);
-            originalOfProdCh = "cloneTestCh";
-        }
 
-        CustomChannelInfoJson cloneProdChInfo = testUtils.createCustomChannelInfoJson(testPeripheralOrgId,
-                "cloneProdCh", "", originalOfProdCh,
-                testIsGpgCheck, testIssInstallerUpdates, testArchLabel, testChecksumLabel, endOfLifeDate);
+        //create peripheral vendor Channels
+        List<ChannelInfoDetailsJson> vendorChannelInfoListIn = new ArrayList<>();
+        vendorChannelInfoListIn.add(vendorBaseChInfo);
+        vendorChannelInfoListIn.add(vendorChInfo);
 
-        testUtils.createTestVendorChannels(user, DUMMY_SERVER_FQDN);
+        String answer = (String) testUtils.testSyncChannelsApiCall(DUMMY_SERVER_FQDN, vendorChannelInfoListIn);
+        ResultJson<?> result = Json.GSON.fromJson(answer, ResultJson.class);
+        assertTrue(result.isSuccess(), "Failed: " + answer);
 
         Channel vendorBaseCh = ChannelFactory.lookupByLabel(vendorBaseChannelTemplateLabel);
         assertNotNull(vendorBaseCh);
         Channel vendorCh = ChannelFactory.lookupByLabel(vendorChannelTemplateLabel);
         assertNotNull(vendorCh);
 
+
+        ChannelInfoDetailsJson cloneBaseChInfo = testUtils.createChannelInfoDetailsJson(testPeripheralOrgId,
+                "cloneBaseCh", "", vendorBaseChannelTemplateLabel,
+                testIsGpgCheck, testIssInstallerUpdates, testArchLabel, testChecksumLabel, endOfLifeDate);
+
+        ChannelInfoDetailsJson cloneDevelChInfo = testUtils.createChannelInfoDetailsJson(testPeripheralOrgId,
+                "cloneDevelCh", "cloneBaseCh", vendorChannelTemplateLabel,
+                testIsGpgCheck, testIssInstallerUpdates, testArchLabel, testChecksumLabel, endOfLifeDate);
+
+        ChannelInfoDetailsJson cloneTestChInfo = null;
+        String originalOfProdCh = "cloneDevelCh";
+        if (testIncludeTestChannelInChain) {
+            cloneTestChInfo = testUtils.createChannelInfoDetailsJson(testPeripheralOrgId,
+                    "cloneTestCh", "", "cloneDevelCh",
+                    testIsGpgCheck, testIssInstallerUpdates, testArchLabel, testChecksumLabel, endOfLifeDate);
+            originalOfProdCh = "cloneTestCh";
+        }
+
+        ChannelInfoDetailsJson cloneProdChInfo = testUtils.createChannelInfoDetailsJson(testPeripheralOrgId,
+                "cloneProdCh", "", originalOfProdCh,
+                testIsGpgCheck, testIssInstallerUpdates, testArchLabel, testChecksumLabel, endOfLifeDate);
+
+
+
         //create peripheral vendorCh custom cloned channels
-        List<CustomChannelInfoJson> customChannelInfoListIn = new ArrayList<>();
+        List<ChannelInfoDetailsJson> customChannelInfoListIn = new ArrayList<>(vendorChannelInfoListIn);
         customChannelInfoListIn.add(cloneBaseChInfo);
         customChannelInfoListIn.add(cloneDevelChInfo);
         if (testIncludeTestChannelInChain) {
@@ -637,26 +629,9 @@ public class HubControllerTest extends JMockBaseTestCaseWithUser {
         }
         customChannelInfoListIn.add(cloneProdChInfo);
 
-        String answer = (String) testUtils.testAddCustomChannelsApiCall(DUMMY_SERVER_FQDN, customChannelInfoListIn);
-        List<ChannelInfoJson> peripheralCreatedCustomChInfo =
-                Arrays.asList(Json.GSON.fromJson(answer, ChannelInfoJson[].class));
-
-        if (testIncludeTestChannelInChain) {
-            assertEquals(4, peripheralCreatedCustomChInfo.size());
-        }
-        else {
-            assertEquals(3, peripheralCreatedCustomChInfo.size());
-        }
-        assertTrue(peripheralCreatedCustomChInfo.stream()
-                .anyMatch(e -> e.getLabel().equals("cloneBaseCh")));
-        assertTrue(peripheralCreatedCustomChInfo.stream()
-                .anyMatch(e -> e.getLabel().equals("cloneDevelCh")));
-        if (testIncludeTestChannelInChain) {
-            assertTrue(peripheralCreatedCustomChInfo.stream()
-                    .anyMatch(e -> e.getLabel().equals("cloneTestCh")));
-        }
-        assertTrue(peripheralCreatedCustomChInfo.stream()
-                .anyMatch(e -> e.getLabel().equals("cloneProdCh")));
+        answer = (String) testUtils.testSyncChannelsApiCall(DUMMY_SERVER_FQDN, customChannelInfoListIn);
+        result = Json.GSON.fromJson(answer, ResultJson.class);
+        assertTrue(result.isSuccess(), "Failed: " + answer);
 
         Channel cloneBaseCh = ChannelFactory.lookupByLabel("cloneBaseCh");
         assertNotNull(cloneBaseCh);
@@ -721,96 +696,97 @@ public class HubControllerTest extends JMockBaseTestCaseWithUser {
 
     @Test
     public void ensureNotThrowingWhenDataIsValid() throws Exception {
-        CustomChannelInfoJson customChInfo = testUtils.createValidCustomChInfo();
+        ChannelInfoDetailsJson customChInfo = testUtils.createValidCustomChInfo();
 
-        testUtils.checkAddCustomChannelsApiNotThrowing(DUMMY_SERVER_FQDN, List.of(customChInfo));
+        testUtils.checkSyncChannelsApiNotThrowing(DUMMY_SERVER_FQDN, List.of(customChInfo));
     }
 
     @Test
     public void ensureThrowsWhenMissingPeriperhalOrg() throws Exception {
-        CustomChannelInfoJson customChInfo = testUtils.createValidCustomChInfo();
+        ChannelInfoDetailsJson customChInfo = testUtils.createValidCustomChInfo();
         customChInfo.setPeripheralOrgId(75842L);
 
-        testUtils.checkAddCustomChannelsApiThrows(DUMMY_SERVER_FQDN, List.of(customChInfo), "No org id");
+        testUtils.checkSyncChannelsApiThrows(DUMMY_SERVER_FQDN, List.of(customChInfo), "No org id");
     }
 
     @Test
     public void ensureThrowsWhenMissingChannelArch() throws Exception {
-        CustomChannelInfoJson customChInfo = testUtils.createValidCustomChInfo();
+        ChannelInfoDetailsJson customChInfo = testUtils.createValidCustomChInfo();
         customChInfo.setChannelArchLabel("channel-dummy-arch");
 
-        testUtils.checkAddCustomChannelsApiThrows(DUMMY_SERVER_FQDN, List.of(customChInfo), "No channel arch");
+        testUtils.checkSyncChannelsApiThrows(DUMMY_SERVER_FQDN, List.of(customChInfo), "No channel arch");
     }
 
     @Test
     public void ensureThrowsWhenMissingChecksumType() throws Exception {
-        CustomChannelInfoJson customChInfo = testUtils.createValidCustomChInfo();
+        ChannelInfoDetailsJson customChInfo = testUtils.createValidCustomChInfo();
         customChInfo.setChecksumTypeLabel("sha123456");
 
-        testUtils.checkAddCustomChannelsApiThrows(DUMMY_SERVER_FQDN, List.of(customChInfo), "No checksum type");
+        testUtils.checkSyncChannelsApiThrows(DUMMY_SERVER_FQDN, List.of(customChInfo), "No checksum type");
     }
 
     @Test
     public void ensureThrowsWhenMissingParentChannel() throws Exception {
-        CustomChannelInfoJson customChInfo = testUtils.createValidCustomChInfo();
+        ChannelInfoDetailsJson customChInfo = testUtils.createValidCustomChInfo();
         customChInfo.setParentChannelLabel("missingParentChannelLabel");
 
-        testUtils.checkAddCustomChannelsApiThrows(DUMMY_SERVER_FQDN, List.of(customChInfo), "No parent channel");
+        testUtils.checkSyncChannelsApiThrows(DUMMY_SERVER_FQDN, List.of(customChInfo),
+                "Information about the parent channel");
     }
 
     @Test
     public void ensureNotThrowingWhenParentChannelIsCreatedBefore() throws Exception {
-        CustomChannelInfoJson customParentChInfo = testUtils.createValidCustomChInfo("parentChannel");
+        ChannelInfoDetailsJson customParentChInfo = testUtils.createValidCustomChInfo("parentChannel");
 
-        CustomChannelInfoJson customChildChInfo = testUtils.createValidCustomChInfo("childChannel");
+        ChannelInfoDetailsJson customChildChInfo = testUtils.createValidCustomChInfo("childChannel");
         customChildChInfo.setParentChannelLabel("parentChannel");
 
-        testUtils.checkAddCustomChannelsApiNotThrowing(DUMMY_SERVER_FQDN,
+        testUtils.checkSyncChannelsApiNotThrowing(DUMMY_SERVER_FQDN,
                 Arrays.asList(customParentChInfo, customChildChInfo));
     }
 
     @Test
-    public void ensureThrowsWhenParentChannelIsCreatedAfter() throws Exception {
-        CustomChannelInfoJson customParentChInfo = testUtils.createValidCustomChInfo("parentChannel");
+    public void ensureNotThrowingWhenParentChannelIsCreatedAfter() throws Exception {
+        ChannelInfoDetailsJson customParentChInfo = testUtils.createValidCustomChInfo("parentChannel");
 
-        CustomChannelInfoJson customChildChInfo = testUtils.createValidCustomChInfo("childChannel");
+        ChannelInfoDetailsJson customChildChInfo = testUtils.createValidCustomChInfo("childChannel");
         customChildChInfo.setParentChannelLabel("parentChannel");
 
-        testUtils.checkAddCustomChannelsApiThrows(DUMMY_SERVER_FQDN,
-                Arrays.asList(customChildChInfo, customParentChInfo), "No parent channel");
+        testUtils.checkSyncChannelsApiNotThrowing(DUMMY_SERVER_FQDN,
+                Arrays.asList(customChildChInfo, customParentChInfo));
     }
 
     @Test
     public void ensureThrowsWhenMissingOriginalChannelInClonedChannels() throws Exception {
-        CustomChannelInfoJson customChInfo = testUtils.createValidCustomChInfo();
+        ChannelInfoDetailsJson customChInfo = testUtils.createValidCustomChInfo();
 
-        CustomChannelInfoJson clonedCustomChInfo = testUtils.createValidCustomChInfo("clonedCustomCh");
+        ChannelInfoDetailsJson clonedCustomChInfo = testUtils.createValidCustomChInfo("clonedCustomCh");
         clonedCustomChInfo.setOriginalChannelLabel(customChInfo.getLabel() + "MISSING");
 
-        testUtils.checkAddCustomChannelsApiThrows(DUMMY_SERVER_FQDN,
-                Arrays.asList(customChInfo, clonedCustomChInfo), "No original channel");
+        testUtils.checkSyncChannelsApiThrows(DUMMY_SERVER_FQDN,
+                Arrays.asList(customChInfo, clonedCustomChInfo), "Information about the original channel");
     }
 
     @Test
     public void ensureNotThrowingWhenOriginalChannelIsCreatedBefore() throws Exception {
-        CustomChannelInfoJson customChInfo = testUtils.createValidCustomChInfo("originalCustomCh");
+        ChannelInfoDetailsJson customChInfo = testUtils.createValidCustomChInfo("originalCustomCh");
 
-        CustomChannelInfoJson clonedCustomChInfo = testUtils.createValidCustomChInfo("clonedCustomCh");
+        ChannelInfoDetailsJson clonedCustomChInfo = testUtils.createValidCustomChInfo("clonedCustomCh");
         clonedCustomChInfo.setOriginalChannelLabel("originalCustomCh");
 
-        testUtils.checkAddCustomChannelsApiNotThrowing(DUMMY_SERVER_FQDN,
+        testUtils.checkSyncChannelsApiNotThrowing(DUMMY_SERVER_FQDN,
                 Arrays.asList(customChInfo, clonedCustomChInfo));
     }
 
     @Test
-    public void ensureThrowsWhenOriginalChannelIsCreatedAfter() throws Exception {
-        CustomChannelInfoJson customChInfo = testUtils.createValidCustomChInfo("originalCustomCh");
+    public void ensureNotThrowingWhenOriginalChannelIsCreatedAfter() throws Exception {
+        ChannelInfoDetailsJson customChInfo = testUtils.createValidCustomChInfo("originalCustomCh");
 
-        CustomChannelInfoJson clonedCustomChInfo = testUtils.createValidCustomChInfo("clonedCustomCh");
+        ChannelInfoDetailsJson clonedCustomChInfo = testUtils.createValidCustomChInfo("clonedCustomCh");
         clonedCustomChInfo.setOriginalChannelLabel("originalCustomCh");
 
-        testUtils.checkAddCustomChannelsApiThrows(DUMMY_SERVER_FQDN,
-                Arrays.asList(clonedCustomChInfo, customChInfo), "No original channel");
+        testUtils.checkSyncChannelsApiNotThrowing(DUMMY_SERVER_FQDN,
+                Arrays.asList(clonedCustomChInfo, customChInfo));
     }
 
     @Test
@@ -845,7 +821,7 @@ public class HubControllerTest extends JMockBaseTestCaseWithUser {
         Channel productionCh = ChannelFactory.lookupById((long) productionChId);
         productionCh.setProduct(testCh.getProduct());
 
-        CustomChannelInfoJson testChInfo = ChannelFactory.toCustomChannelInfo(testCh,
+        ChannelInfoDetailsJson testChInfo = ChannelFactory.toChannelInfo(testCh,
                 peripheralUser.getOrg().getId(), Optional.empty());
 
         assertEquals(localUser.getOrg().getId(), testCh.getOrg().getId());
@@ -856,10 +832,10 @@ public class HubControllerTest extends JMockBaseTestCaseWithUser {
         assertEquals(vendorCh.getProduct().getProduct(), testChInfo.getChannelProductProduct());
         assertEquals(vendorCh.getProduct().getVersion(), testChInfo.getChannelProductVersion());
         assertEquals("sha512", testChInfo.getChecksumTypeLabel());
-        assertEquals("sles11-sp3-updates-x86_64", testChInfo.getOriginalChannelLabel());
+        assertNull(testChInfo.getOriginalChannelLabel());
 
-        CustomChannelInfoJson productionChInfo = ChannelFactory.toCustomChannelInfo(productionCh,
-                peripheralUser.getOrg().getId(), Optional.empty());
+        ChannelInfoDetailsJson productionChInfo = ChannelFactory.toChannelInfo(productionCh,
+                peripheralUser.getOrg().getId(), Optional.of("sles11-sp3-updates-x86_64"));
 
         assertEquals(localUser.getOrg().getId(), productionCh.getOrg().getId());
         assertEquals(peripheralUser.getOrg().getId(), productionChInfo.getPeripheralOrgId());
@@ -869,21 +845,21 @@ public class HubControllerTest extends JMockBaseTestCaseWithUser {
         assertEquals(vendorCh.getProduct().getProduct(), productionChInfo.getChannelProductProduct());
         assertEquals(vendorCh.getProduct().getVersion(), productionChInfo.getChannelProductVersion());
         assertEquals("sha512", productionChInfo.getChecksumTypeLabel());
-        assertEquals("clone-of-sles11-sp3-updates-x86_64", productionChInfo.getOriginalChannelLabel());
+        assertEquals("sles11-sp3-updates-x86_64", productionChInfo.getOriginalChannelLabel());
     }
 
     @Test
     public void checkModifyCustomChannels() throws Exception {
         // cloneDevelCh -> cloneTestCh -> cloneProdCh
-        CustomChannelInfoJson cloneDevelChInfo = testUtils.createValidCustomChInfo("cloneDevelCh");
+        ChannelInfoDetailsJson cloneDevelChInfo = testUtils.createValidCustomChInfo("cloneDevelCh");
 
-        CustomChannelInfoJson cloneTestChInfo = testUtils.createValidCustomChInfo("cloneTestCh");
+        ChannelInfoDetailsJson cloneTestChInfo = testUtils.createValidCustomChInfo("cloneTestCh");
         cloneTestChInfo.setOriginalChannelLabel("cloneDevelCh");
 
-        CustomChannelInfoJson cloneProdChInfo = testUtils.createValidCustomChInfo("cloneProdCh");
+        ChannelInfoDetailsJson cloneProdChInfo = testUtils.createValidCustomChInfo("cloneProdCh");
         cloneProdChInfo.setOriginalChannelLabel("cloneTestCh");
 
-        testUtils.checkAddCustomChannelsApiNotThrowing(DUMMY_SERVER_FQDN,
+        testUtils.checkSyncChannelsApiNotThrowing(DUMMY_SERVER_FQDN,
                 Arrays.asList(cloneDevelChInfo, cloneTestChInfo, cloneProdChInfo));
 
         Channel cloneDevelCh = ChannelFactory.lookupByLabel("cloneDevelCh");
@@ -898,9 +874,8 @@ public class HubControllerTest extends JMockBaseTestCaseWithUser {
         User anotherPeripheralUser = UserTestUtils.findNewUser(
                 "another_peripheral_user_", "another_peripheral_org_", true);
 
-        ModifyCustomChannelInfoJson modifyInfo = new ModifyCustomChannelInfoJson("cloneProdCh");
-        modifyInfo.setPeripheralOrgId(anotherPeripheralUser.getOrg().getId());
-        modifyInfo.setOriginalChannelLabel("cloneDevelCh");
+        ChannelInfoDetailsJson modifyInfo = ChannelFactory.toChannelInfo(
+                cloneProdCh, anotherPeripheralUser.getOrg().getId(), Optional.of("cloneDevelCh"));
 
         modifyInfo.setBaseDir("baseDir_diff");
         modifyInfo.setName("name_diff");
@@ -925,39 +900,40 @@ public class HubControllerTest extends JMockBaseTestCaseWithUser {
 
         testUtils.checkDifferentModifications(modifyInfo, cloneProdCh);
 
-        String answer = (String) testUtils.testModifyCustomChannelsApiCall(DUMMY_SERVER_FQDN, List.of(modifyInfo));
-        List<ChannelInfoJson> peripheralModifiedCustomChInfo =
-                Arrays.asList(Json.GSON.fromJson(answer, ChannelInfoJson[].class));
+        String answer = (String) testUtils.testSyncChannelsApiCall(DUMMY_SERVER_FQDN,
+                List.of(cloneDevelChInfo, modifyInfo, cloneTestChInfo));
+        ResultJson<?> result = Json.GSON.fromJson(answer, ResultJson.class);
+        assertTrue(result.isSuccess(), "Failed: " + answer);
 
-        assertEquals(1, peripheralModifiedCustomChInfo.size());
         testUtils.checkEqualModifications(modifyInfo, cloneProdCh);
     }
 
     @Test
     public void ensureNotThrowingWhenModifyingDataIsValid() throws Exception {
-        ModifyCustomChannelInfoJson modifyInfo = testUtils.createValidModifyCustomChInfo("customCh");
+        ChannelInfoDetailsJson modifyInfo = testUtils.createValidCustomChInfo("customCh");
         testUtils.createTestChannel(modifyInfo, user);
 
-        testUtils.checkModifyCustomChannelsApiNotThrowing(DUMMY_SERVER_FQDN, List.of(modifyInfo));
+        testUtils.checkSyncChannelsApiNotThrowing(DUMMY_SERVER_FQDN, List.of(modifyInfo));
     }
 
     @Test
     public void ensureThrowsWhenModifyingMissingPeriperhalOrg() throws Exception {
-        ModifyCustomChannelInfoJson modifyInfo = testUtils.createValidModifyCustomChInfo("customCh");
+        ChannelInfoDetailsJson modifyInfo = testUtils.createValidCustomChInfo("customCh");
         testUtils.createTestChannel(modifyInfo, user);
 
         modifyInfo.setPeripheralOrgId(75842L);
 
-        testUtils.checkModifyCustomChannelsApiThrows(DUMMY_SERVER_FQDN, List.of(modifyInfo), "No org id");
+        testUtils.checkSyncChannelsApiThrows(DUMMY_SERVER_FQDN, List.of(modifyInfo), "No org id");
     }
 
     @Test
     public void ensureThrowsWhenModifyingMissingOriginalChannelInClonedChannels() throws Exception {
-        ModifyCustomChannelInfoJson modifyInfo = testUtils.createValidModifyCustomChInfo("customCh");
+        ChannelInfoDetailsJson modifyInfo = testUtils.createValidCustomChInfo("customCh");
         testUtils.createTestChannel(modifyInfo, user);
 
         modifyInfo.setOriginalChannelLabel(modifyInfo.getLabel() + "MISSING");
 
-        testUtils.checkModifyCustomChannelsApiThrows(DUMMY_SERVER_FQDN, List.of(modifyInfo), "No original channel");
+        testUtils.checkSyncChannelsApiThrows(DUMMY_SERVER_FQDN, List.of(modifyInfo),
+                "Information about the original channel");
     }
 }
